# distillation-framework

./: .gitignore  README.md  pyproject.toml
examples/: benchmark_cifar10.py  minimal_train.py
flux_distill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/conf/: config.py
src/core/: interfaces.py
src/engine/: callbacks.py  evaluator.py  trainer.py
src/infra/: loader.py  loss.py  mlops.py  model_wrapper.py
src/utils/: plotting.py
tests/: test_infra.py  test_infra_unittest.py
